ipc/ipdl/test/ipdl/ok/multiManager1.ipdl
include protocol "multiManaged.ipdl";

protocol multiManager1 {
    manages multiManaged;

child:
    multiManaged();
};
